--- a/style.css
+++ b/style.css
@@ -18,6 +18,26 @@ main {
   display: flex;
 }
 
+.flex-cards {
+  display: flex;
+}
+
+.card {
+  margin: 25px;
+  background-color: #F97015;
+  height: 75px;
+  width: 75px;
+  border-radius: 50%;
+}
+
+.size {
+  display: block;
+  width: 50%;
+  height: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 h1 {
   font-size: 3rem;
   font-weight: 400;
