--- a/style.css
+++ b/style.css
@@ -95,6 +95,15 @@ article {
 .orange-background {
   background-color: #F97015;
 }
+
+.padding {
+  padding: 30px;
+}
+
+.image {
+  width: 100%;
+  height: 100%;
+}
 /* FOOTER */
 footer {
   font-family: "Open Sans", sans-serif;
