--- a/template-1/style.css
+++ b/template-1/style.css
@@ -25,6 +25,7 @@ article {
   font-family: "Open Sans", sans-serif;
 }
 
+
 .png {
   color: #ffffff;
   filter: contrast(0%) brightness(2);
@@ -104,6 +105,26 @@ article {
   width: 100%;
   height: 100%;
 }
+
+.flex-icons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.social-icon {
+  display: block;
+  width: 5%;
+  margin: 0 8px;
+}
+
+
+/* .text {
+  text-align: center;
+  color: white;
+  font-size: 48px;
+} */
+
 /* FOOTER */
 footer {
   font-family: "Open Sans", sans-serif;
