add new template

--- a/template-2/style.css
+++ b/template-2/style.css
@@ -47,3 +47,5 @@ footer a:hover, footer a:active {
   color: gray;
   text-decoration: none;
 }
+
+/*https://nicepage.com/html-templates/preview/subscribe-and-follow-us-on-image-background-2881296?device=desktop*/
